force-app/main/default/objects/Bin_Location__c/fields/Bin_Height__c.field-meta.xml
<CustomField>
    <fullName>Bin_Height__c</fullName>
    <inlineHelpText>Expressed in Inches</inlineHelpText>
    <label>Bin Height</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>