force-app/main/default/objects/Bin_Location__c/fields/Bin_Volume_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Bin_Volume_Capacity__c</fullName>
    <formula>Bin_Height__c *  Bin_Width__c *  Bin_Length__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Expressed in Cubic Inches</inlineHelpText>
    <label>Bin Volume Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>