force-app/main/default/objects/Bin_Location__c/fields/Bin_Volume_Cubic_Feet__c.field-meta.xml
<CustomField>
    <fullName>Bin_Volume_Cubic_Feet__c</fullName>
    <formula>Bin_Volume_Capacity__c / 1728</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bin Volume Cubic Feet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>