force-app/main/default/objects/Bin_Location__c/fields/Cubic_Volume_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Cubic_Volume_Utilization__c</fullName>
    <label>Cubic Volume Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>