force-app/main/default/objects/Bin_Location__c/fields/Ignore_Storage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Storage_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Storage Limit</label>
    <type>Checkbox</type>
</CustomField>