force-app/main/default/objects/Bin_Location__c/fields/Inventory_Location__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Location__c</fullName>
    <formula>Rack_Level__r.Rack__r.Inventory_Location__r.Name</formula>
    <label>Inventory Location</label>
    <type>Text</type>
</CustomField>