force-app/main/default/objects/Bin_Location__c/fields/Rack__c.field-meta.xml
<CustomField>
    <fullName>Rack__c</fullName>
    <formula>Rack_Level__r.Rack__r.Name</formula>
    <label>Rack</label>
    <type>Text</type>
</CustomField>