force-app/main/default/objects/Bin_Location__c/fields/Rack_Level__c.field-meta.xml
<CustomField>
    <fullName>Rack_Level__c</fullName>
    <label>Rack Level</label>
    <referenceTo>Rack_Level__c</referenceTo>
    <relationshipLabel>Bin Locations</relationshipLabel>
    <relationshipName>Bin_Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>