force-app/main/default/objects/Bin_Location__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <formula>Rack_Level__r.Rack__r.Inventory_Location__r.Site_Name__r.Name</formula>
    <label>Site</label>
    <type>Text</type>
</CustomField>