force-app/main/default/objects/Bin_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bin_Height__c</columns>
    <columns>Bin_Length__c</columns>
    <columns>Bin_Volume_Capacity__c</columns>
    <columns>Cubic_Volume_Utilization__c</columns>
    <columns>Bin_Width__c</columns>
    <columns>Inventory_Location__c</columns>
    <columns>Rack__c</columns>
    <columns>Rack_Level__c</columns>
    <columns>Site__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>